<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_notice_subject" />
    <EditText android:id="@id/groupNoticeSubject" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:inputType="textAutoCorrect" />
    <LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/groupNoticeAttachmentText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
        <Button android:layout_gravity="center_vertical" android:id="@id/groupNoticeAttachmentButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_notice_attach" style="@style/BorderlessButton" />
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_notice_text" />
    <EditText android:gravity="top" android:id="@id/groupNoticeEditText" android:layout_width="fill_parent" android:layout_height="fill_parent" android:singleLine="false" android:layout_weight="1.0" android:inputType="textMultiLine" />
    <Button android:layout_gravity="right" android:id="@id/groupNoticeSendButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/group_notice_send" />
</LinearLayout>
