<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@id/voice_status_card_view" android:paddingLeft="0.0dip" android:paddingTop="0.0dip" android:paddingRight="0.0dip" android:paddingBottom="10.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" app:cardBackgroundColor="?CardViewDetailsBackground" app:cardElevation="10.0dip" app:cardUseCompatPadding="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.0">
                <ImageButton android:id="@id/voice_mic_on_button" android:background="#ff669900" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="?IconMaterialMicLight" android:scaleType="fitCenter" android:contentDescription="@string/description_mic_on" style="@style/BorderlessCardButton" />
                <ImageButton android:id="@id/voice_mic_off_button" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="?IconMaterialMicOffThemed" android:scaleType="fitCenter" android:contentDescription="@string/description_mic_off" style="@style/BorderlessCardButton" />
                <ImageButton android:id="@id/voice_answer_button" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="?IconMaterialVoiceCallThemed" android:scaleType="fitCenter" android:contentDescription="@string/description_answer_call" style="@style/BorderlessCardButton" />
            </FrameLayout>
            <ImageView android:layout_gravity="center" android:id="@id/voice_speak_indicator_left" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/voice_speaking_indicator_left" android:layout_weight="0.0" />
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/voice_status_text" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/CardLargeDetails" />
                <TextView android:gravity="center" android:layout_gravity="center" android:id="@id/voice_status_small_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <ImageView android:layout_gravity="center" android:id="@id/voice_speak_indicator_right" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/voice_speaking_indicator_right" android:layout_weight="0.0" />
            <ImageButton android:layout_gravity="center" android:id="@id/voice_terminate_button" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="?MenuIconCloseThemed" android:layout_weight="0.0" style="@style/BorderlessCardButton" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/voice_status_controls" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:padding="10.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:src="?IconMaterialVoiceCallThemed" android:scaleType="fitCenter" android:layout_weight="0.0" android:contentDescription="@string/description_mic_on" />
                <SeekBar android:layout_gravity="center_vertical" android:id="@id/voice_speaker_volume_control" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_gravity="center_vertical" android:id="@id/voice_loudspeaker_button" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="?IconMaterialMicLight" android:scaleType="fitCenter" android:text="@string/loudspeaker" android:drawableBottom="@drawable/inactive_button_underline" android:drawableLeft="?IconMaterialLoudspeakerThemed" android:layout_weight="1.0" style="@style/BorderlessCardButton" />
                <Button android:layout_gravity="center_vertical" android:id="@id/voice_bluetooth_button" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="?IconMaterialMicLight" android:scaleType="fitCenter" android:text="@string/bluetooth" android:drawableBottom="@drawable/inactive_button_underline" android:drawableLeft="?IconMaterialBluetoothThemed" android:layout_weight="1.0" style="@style/BorderlessCardButton" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
